# DNAi

./: .gitignore  DNAi.ipynb  Dockerfile  README.md  pyproject.toml
configs/: config.yaml
dnafiber/: _version_.py  config.py  deployment.py  inference.py  metric.py  start.py  trainee.py  utils.py
dnafiber/analysis/: chart.py  const.py  dataframe.py  figure_assembly.py  ratios.py  stats.py
dnafiber/data/: consts.py  dataset.py  nd2_format.py  preprocess.py  readers.py  utils.py
dnafiber/data/export/: utils.py
dnafiber/error_detection/: const.py  datamodule.py  inference.py  model.py  train.py
dnafiber/experiments/: __init__.py  common.py  fiberQ.py  multimicroscope.py  utils.py
dnafiber/experiments/S1/: maps.py
dnafiber/experiments/deltavision/: consts.py  loader.py
dnafiber/experiments/fork_protection/: exp35.py  exp36.py  exp39.py  maps.py
dnafiber/images/: crop.py  mosaic.py
dnafiber/intergrader/: utils.py
dnafiber/model/: autopadDPT.py  models_zoo.py  utils.py
dnafiber/postprocess/: core.py  fiber.py  skan.py  skeletonization.py  types.py  utils.py
dnafiber/stats/: intergrader.py
dnafiber/streamlit/: .config.toml
dnafiber/ui/: __init__.py  colors.py  components.py  consts.py  hardware.py  inference.py  io.py  mosaic.py  utils.py
dnafiber/ui/custom/fiber_ui/: __init__.py
dnafiber/ui/custom/fiber_ui/frontend/src/: FiberComponent.tsx  style.css  types.ts
dnafiber/ui/custom/fiber_ui/frontend/src/components/: ContextMenu.tsx  FlattenedFiber.tsx  KeyboardHelp.tsx  ScaleRuler.tsx  Sidebar.tsx  Toolbar.tsx  index.ts
dnafiber/ui/custom/fiber_ui/frontend/src/hooks/: index.ts  useFiberNavigation.ts  useFiberTypes.ts  useInspection.ts
dnafiber/ui/custom/fiber_ui/frontend/src/utils/: colors.ts  constants.ts  exportFiber.ts  geometry.ts  index.ts
dnafiber/ui/pages/: 1_Load.py  2_Viewer.py  3_Analysis.py  4_Test_Zone.py
notebook/: test_postprocess.ipynb
notebook bk/intergraders/: count.ipynb  inference.ipynb  properties_with_IA.pkl  ratios.ipynb
notebook bk/validation/: SegFormer MiT-B4_properties.pkl  compare.ipynb  inference.ipynb  segformer MiT-B2_properties.pkl
notebook bk/validation/.streamlit/: config.toml
notebook/delta_experiments/: analyse dv.ipynb
notebook/export/: analyse_relabel.ipynb  prepare_S1.ipynb  prepare_original.ipynb
notebook/noise_robustness/: noise_robustness.ipynb
notebook/preprocess/: test.ipynb
scripts/: train.py  train.sh
