
[build-system]
requires = ["setuptools>=42", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "dnafiber"
version = "0.2.0"
description = ""
authors = ["ClementPla <clement.playout@polymtl.ca>"]
readme = "README.md"

[tool.poetry.scripts]
DNAI = "dnafiber.start:main"

[tool.setuptools_scm]
write_to="dnafiber/_version_.py"
version_scheme="guess-next-dev"
local_scheme="node-and-date"

[tool.setuptools]
packages = ["dnafiber"]

[project]
name = "dnafiber"
dynamic = ["version"]
description = ""
authors = [{name="ClementPla", email="clement.playout@polymtl.ca"}]
readme = "README.md"
dependencies = [
    "lightning>=2.5.0.post0",
    "monai>=1.4.0",
    "segmentation-models-pytorch>=0.4.0",
    "huggingface-hub>=1.3.2",
    "czifile~=2019.7.2",
    "tifffile~=2026.1.14",
    "streamlit==1.43.2",
    "plotly==6.0.1",
    "pandas==2.2.3",
    "scipy==1.15.2",
    "numpy>=1.22.4",
    "matplotlib>=3.10.3",
    "bokeh>=3.0.0",
    "streamlit-bokeh>=3.0.0",
    "torchmetrics==1.6.3",
    "albumentations==2.0.3",
    "catppuccin==2.4.1",
    "scikit-image==0.26.0",
    "kornia==0.8.2",
    "numba==0.63.1",
    "ttach==0.0.3",
    "mrc==0.4.0",
    "dotenv==0.9.9"
]


[project.scripts]
DNAI = "dnafiber.start:main"


[tool.poetry.dependencies]
python = "^3.10"
lightning= "^2.5.0.post0"
monai= "^1.4.0"
segmentation_models_pytorch="^0.5.0"
huggingface_hub="^1.3.2"
czifile="~2019.7.2.1"
tifffile="~2026.1.14"
streamlit = "1.43.2"
plotly = "6.0.1"                   
pandas = "2.2.3"
scipy = "1.15.2"
numpy = "^2.3.3"
matplotlib = "^3.10.3"
bokeh = "^3.0.0"
streamlit_bokeh = "^3.0.0"
torchmetrics = "1.6.3"
albumentations = "2.0.3"
catppuccin = "2.4.1"
scikit-image = "0.26.0"
kornia = "0.8.1"
numba = "0.63.1"
ttach = "0.0.3"
mrc = "0.4.0"

