
[build-system]
requires = ["setuptools>=42", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "dnafiber"
version = "0.2.0"
description = ""
authors = ["ClementPla <clement.playout.cemtl@ssss.gouv.qc.ca>"]
readme = "README.md"

[tool.poetry.scripts]
DNAI = "dnafiber.start:main"

[tool.setuptools_scm]
write_to="dnafiber/_version_.py"
version_scheme="guess-next-dev"
local_scheme="node-and-date"

[tool.setuptools]
packages = ["dnafiber"]

[project]
name = "dnafiber"
dynamic = ["version"]
description = ""
authors = [{name="ClementPla", email="clement.playout.cemtl@ssss.gouv.qc.ca"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML - minimum versions, let pip resolve torch compatibility
    "lightning>=2.5.0",
    "monai>=1.4.0",
    "segmentation-models-pytorch>=0.4.0",
    "torchmetrics>=1.6.0",
    "albumentations>=2.0.0",
    "kornia>=0.8.0",
    "ttach>=0.0.3",
    
    # Model hub
    "huggingface-hub>=0.20.0",
    
    # Image formats - compatible release (allows patches)
    "czifile~=2019.7.2",
    "tifffile>=2024.1.0",
    "mrc>=0.3.0",
    
    # UI
    "streamlit>=1.40.0",
    "plotly>=5.18.0",
    "bokeh>=3.0.0",
    "streamlit-bokeh>=3.0.0",
    
    # Data processing
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "scikit-image>=0.22.0",
    "numba>=0.59.0",
    "psutil>=5.9.0",
    # Misc
    "catppuccin>=2.0.0",
    "python-dotenv>=1.0.0",  # Note: 'dotenv' is a different package
]

[project.scripts]
DNAI = "dnafiber.start:main"



